# MonProjetCpp

./: #include <iostream>.cpp  #include<iostrem>.cpp  Complexe  ComplexeCC2.cpp  Exo.cpp  Fibo  PileCC2.cpp  PointeurFonct.cpp  Polynome  S6exo1.cpp  TD3  TD3.cpp  TP2.cpp  TP2_exo  TP2_prog  TP2_prog£  TP4CC2.cpp  Template  Template.cpp  VecteurCC2.cpp  a  a.cpp  b  b.cpp  br  brouillon  brouillon.cpp  brouillon2.cpp  chat  chat.cpp  classPoint.cpp  date  date.cpp  exo  exo1  exo11_TP1.cpp  exo2  exo2.cpp  exoServeur  exoServeur.cpp  (+17 more)
Documents/Dossier_C++/: Polynome.cpp
Documents/ProjectInfo/chatbotl3/: .gitignore  CMakeLists.txt  LICENSE  LLAMA_SETUP.md  README.md
Documents/ProjectInfo/chatbotl3/doc/: Doxyfile.in  rapport-projet-devinette.md
Documents/ProjectInfo/chatbotl3/include/: ApiClient.hpp  Chatbot.hpp  ColorTerminal.hpp  Devinette.hpp  JsonUtils.hpp
Documents/ProjectInfo/chatbotl3/src/: ApiClient.cpp  Chatbot.cpp  Chatbot.hpp  ColorTerminal.cpp  Devinette.cpp  Devinette.hpp  JsonUtils.cpp  main.cpp
Documents/ProjectInfo/chatbotl3/tests/: test_api_client.cpp  test_chatbot.cpp  test_devinette.cpp  test_integration.cpp  test_json_utils.cpp  testchatbot.cpp  testdevinette.cpp
TP1/: TD1.cpp  exo0.cpp  exo1.cpp  exo11  exo12.cpp  exo12_TP1.cpp
TP1/TP2/: TP2.cpp
entreinement/: AdditionVecteur.cpp  AjouteLstTrie.c  AjouteLstTrie.cpp  ExoNet.cpp  Factorielle.cpp  FusionVecteur.cpp  ProduitTraceMatrice.cpp  Trie.cpp  TrieSelection.cpp  Trie_insertion.cpp  code.cpp  trieBrouillon.cpp
entreinement/code.dSYM/Contents/Resources/DWARF/: code
